k8s/coder/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coder
