k8s/coder/infrastructure.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coder
