k8s/coder/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coder

---

apiVersion: v1
kind: Namespace
metadata:
  name: coder-workspaces
