k8s/coder/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coder-ui-api
  namespace: coder
  annotations:
    external-dns.kubernetes.io/ttl: "300"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
      sectionName: websecure
      kind: Gateway
  hostnames:
    - coder.h3rmt.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: coder
          port: 80
